Fixes #890 - Private POI tooltip is too wide

--- a/IsraelHiking.Web/sources/scss/common.scss
+++ b/IsraelHiking.Web/sources/scss/common.scss
@@ -289,7 +289,7 @@ ngx-image-gallery .image {
     }
 
     .marker-popup {
-        width: 260px;
+        max-width: 260px;
     }
 }
 
